Ricerca comnunicazione Bacheca per provider e segreteria

--- a/src/main/resources/templates/ricerca/ricercaComunicazione.html
+++ b/src/main/resources/templates/ricerca/ricercaComunicazione.html
@@ -10,10 +10,11 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.ricerca_comunicazione}"></h2>
+						<h2 th:text="#{label.cerca_comunicazione}"></h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
-  								<a class="btn btn-primary" th:href="@{/comunicazione/all/list}" th:text="#{label.indietro}"></a>
+								<a class="btn btn-primary" th:if="${ricercaComunicazioneWrapper.providerId != null}" th:href="@{|/provider/${ricercaComunicazioneWrapper.providerId}/comunicazione/list|}" th:text="#{label.indietro}"></a>
+  								<a class="btn btn-primary" th:unless="${ricercaComunicazioneWrapper.providerId != null}" th:href="@{/comunicazione/all/list}" th:text="#{label.indietro}"></a>
   								<a class="btn btn-success" th:text="#{label.cerca}" onclick="submitCerca()"></a>
 							</div>
 						</div>
@@ -29,6 +30,34 @@
 							method="post" enctype="multipart/form-data"
 							novalidate="novalidate">
 							
+								<input type="hidden" th:field="${ricercaComunicazioneWrapper.providerId}" />
+							
+								<th:block th:if="${ricercaComunicazioneWrapper.providerId == null}">
+									<!-- ID PROVIDER -->
+									<div class="item form-group">
+										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="providerId">
+											<span th:text="${'ID '} + #{label.provider}">Provider</span>
+										</label>
+				
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="providerId">
+											<input type="text" pattern="numeric" class="form-control" th:field="${ricercaComunicazioneWrapper.campoIdProvider}" />
+										</div>
+									</div>
+								
+									<!-- DENOMINAZIONE LEGALE PROVIDER -->
+									<div class="item form-group">
+										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="denominazioneLegale">
+											<span th:text="#{label.denominazione_legale} + ${' '}  + #{label.provider}">Provider</span>
+										</label>
+				
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="denominazioneLegale">
+											<input type="text" class="form-control" th:field="${ricercaComunicazioneWrapper.denominazioneLegale}" />
+										</div>
+									</div>
+									
+									<div class="divider-dashed"></div>
+								</th:block>	
+									
 								<!-- OGGETTO -->
 								<div class="item form-group">
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="oggetto">
