--- a/src/main/resources/templates/ricerca/ricercaEvento.html
+++ b/src/main/resources/templates/ricerca/ricercaEvento.html
@@ -10,7 +10,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.ricerca_evento}"></h2>
+						<h2 th:text="#{label.cerca_evento}"></h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
   								<a class="btn btn-primary" th:if="${ricercaEventoWrapper.providerId != null}" th:href="@{|/provider/${ricercaEventoWrapper.providerId}/evento/list|}" th:text="#{label.indietro}"></a>
