--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -334,7 +334,7 @@
 												<span class="required">*</span>
 											</label>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="titolo">
-												<textarea class="required" maxlength="3000" id="title" rows="3" name="titolo"
+												<textarea class="required form-control" maxlength="3000" id="title" rows="3" name="titolo"
 													style="resize: none;" th:field="${eventoWrapper.evento.titolo}" th:disabled="${isRiedizione or isEditSemiBloccato}">
 												</textarea>
 												<div id="counter" th:unless="${isRiedizione or isEditSemiBloccato}"></div>
@@ -509,10 +509,10 @@
 														<span th:if="${isEditSemiBloccato}" class="input-group-addon not-last disabled-addon">
 								 							<i class="glyphicon glyphicon-calendar"></i>
 														</span>
-														<span th:unless="${isEditSemiBloccato}" class="input-group-addon" th:onclick="${row.count == (row.size - 1) ? 'aggiungiDataIntermedia(this, ''dateIntermedieId'')' : 'rimuoviDataIntermedia(this, ''dateIntermedieId'', ' + data.key + ')'}" th:classappend="${row.count == (row.size - 1) ? 'add' : 'remove'}">
+														<span th:unless="${isEditSemiBloccato or isRiedizione}" class="input-group-addon" th:onclick="${row.count == (row.size - 1) ? 'aggiungiDataIntermedia(this, ''dateIntermedieId'')' : 'rimuoviDataIntermedia(this, ''dateIntermedieId'', ' + data.key + ')'}" th:classappend="${row.count == (row.size - 1) ? 'add' : 'remove'}">
 															<i th:class="${row.count == (row.size - 1) ? 'fa fa-plus' : 'fa fa-minus'}"></i>
 														</span>
-														<span th:if="${isEditSemiBloccato}" class="input-group-addon disabled-addon" th:classappend="${row.count == (row.size - 1) ? 'add' : 'remove'}">
+														<span th:if="${isEditSemiBloccato or isRiedizione}" class="input-group-addon disabled-addon" th:classappend="${row.count == (row.size - 1) ? 'add' : 'remove'}">
 															<i th:class="${row.count == (row.size - 1) ? 'fa fa-plus' : 'fa fa-minus'}"></i>
 														</span>
 													</div>
