--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -363,7 +363,7 @@
 										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="titolo">
-										<textarea class="required" maxlength="3000" id="title" rows="3" name="titolo"
+										<textarea class="required form-control" maxlength="3000" id="title" rows="3" name="titolo"
 												style="resize: none;" th:field="${eventoWrapper.evento.titolo}" th:disabled="${isRiedizione or isEditSemiBloccato}">
 										</textarea>
 											<div id="counter" th:unless="${isRiedizione or isEditSemiBloccato}"></div>
