--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1320,3 +1320,7 @@ li.listStyle-elenco > label{
 .min-icon-width{
 	min-width: 40px !important;
 }
+
+.text-full-length{
+	white-space: nowrap;
+}
