Bacheca Ricerca Provider Completata

--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -11,6 +11,7 @@
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.provider_lista}">Lista dei provider</h2>
+						<a class="btn btn-success pull-right" th:text="#{label.cerca}" th:href="@{/provider/ricerca}"></a>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
