--- a/src/main/resources/templates/evento/eventoFADShow.html
+++ b/src/main/resources/templates/evento/eventoFADShow.html
@@ -477,7 +477,7 @@
 							<span class="label-show" th:text="#{label.quota_partecipazione}">Quota di partecipazione</span>
 						</label>
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-							<div class="value" th:if="${eventoWrapper.evento.quotaPartecipazione != null}" th:text="${eventoWrapper.evento.quotaPartecipazione+'€'}"></div>
+							<div class="value" th:if="${eventoWrapper.evento.quotaPartecipazione != null}" th:text="${#numbers.formatDecimal(eventoWrapper.evento.quotaPartecipazione, 1, 'POINT', 2, 'COMMA')+'€'}"></div>
 							<div class="value danger" th:unless="${eventoWrapper.evento.quotaPartecipazione != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
@@ -696,7 +696,7 @@
 							<div class="value danger" th:unless="${eventoWrapper.evento.dichiarazioneAssenzaConflittoInteresse != null}" th:text="#{label.allegato_non_inserito}"></div>
 						</div>
 					</div>
-					
+
 					<!-- PROCEDURA VERIFICA QUALITÀ -->
 					<div class="item form-group">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
@@ -707,7 +707,7 @@
 							<div class="value danger" th:unless="${eventoWrapper.evento.proceduraVerificaQualitaPercepita != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					
+
 					<!-- AUTORIZZAZIONE -->
 					<div class="item form-group">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
