--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1316,7 +1316,12 @@ li.listStyle-elenco > label{
 	    width: 100%;
 	    height: 620px;
 	}
-	
+
 .min-icon-width{
 	min-width: 40px !important;
+}
+
+.allegato {
+	float: left;
+	width: 300px;
 }
