--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -906,13 +906,20 @@
 					$('#fromLookUpFull').val(fromLookup);
 					$('#modificaElementoPersonaFull').val(modificaElemento);
 					console.log('fromLookUpFull:' + fromLookup);
+					if(fromLookupFull) {
+						$('#codice_fiscaleFull').prop("disabled", true);
+						console.log("bloccato")
+					}
+					else {
+						$('#codice_fiscaleFull').prop("disabled", false);
+						console.log("sbloccato")
+					}
 				}else{
 					$('#targetTable').val(target);
 					$('#typePersona').val(type);
 					$('#fromLookUp').val(fromLookup);
 					$('#modificaElementoPersona').val(modificaElemento);
 					console.log('fromLookUp:' + fromLookup);
-
 					if(target == 'responsabiliScientifici'){
 						$("#container-qualifica").show();
 						$("#container-ruolo").hide();
@@ -922,6 +929,17 @@
 						$("#container-ruolo").show();
 						$("#container-titolare").show();
 					}
+					if(fromLookup) {
+						$('#codice_fiscale').prop("disabled", true);
+						$('#file_cv_button').prop("disabled", true);
+						$('#firma_cv').prop("disabled", true);
+					}
+					else {
+						$('#codice_fiscale').prop("disabled", false);
+						$('#file_cv_button').prop("disabled", false);
+						$('#firma_cv').prop("disabled", false);
+					}
+
 				}
 			}
 
